Scoring logic completely moved to service, method countAge to util.UtilCalculator